force-app/main/default/objects/apxio__Class_Enrollment__c/apxio__Class_Enrollment__c.object-meta.xml
<CustomObject>
    <description>Student enrollment for an offered class</description>
    <label>Class Enrollment</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Enrollment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>