force-app/main/default/objects/apxio__Class_Enrollment__c/fields/apxio__Final_Grade__c.field-meta.xml
<CustomField>
    <fullName>apxio__Final_Grade__c</fullName>
    <description>Final grade obtained as part of the enrollment</description>
    <label>Final Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4.00</fullName>
            </value>
            <value>
                <fullName>3.67</fullName>
            </value>
            <value>
                <fullName>3.33</fullName>
            </value>
            <value>
                <fullName>3.00</fullName>
            </value>
            <value>
                <fullName>2.67</fullName>
            </value>
            <value>
                <fullName>2.33</fullName>
            </value>
            <value>
                <fullName>2.00</fullName>
            </value>
            <value>
                <fullName>1.67</fullName>
            </value>
            <value>
                <fullName>1.33</fullName>
            </value>
            <value>
                <fullName>1.00</fullName>
            </value>
            <value>
                <fullName>0.67</fullName>
            </value>
            <value>
                <fullName>0.33</fullName>
            </value>
            <value>
                <fullName>0.00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>