force-app/main/default/objects/apxio__Class_Enrollment__c/fields/apxio__Grade_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>apxio__Grade_Change_Reason__c</fullName>
    <description>If a grade is being changed, please enter a reason for the change</description>
    <label>Grade Change Reason</label>
    <type>TextArea</type>
</CustomField>