force-app/main/default/objects/apxio__Class_Enrollment__c/fields/apxio__Offered_Class__c.field-meta.xml
<CustomField>
    <fullName>apxio__Offered_Class__c</fullName>
    <description>The offered class this student is enrolling in</description>
    <label>Offered Class</label>
    <referenceTo>apxio__Class__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Class_Enrollments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>