force-app/main/default/objects/apxio__Class_Enrollment__c/fields/apxio__Pass_Fail__c.field-meta.xml
<CustomField>
    <fullName>apxio__Pass_Fail__c</fullName>
    <description>A grade less than 2.00 means fail</description>
    <formula>IF(
  OR(
    ISPICKVAL(apxio__Final_Grade__c,&apos;0.00&apos;),
    ISPICKVAL(apxio__Final_Grade__c,&apos;0.67&apos;),
    ISPICKVAL(apxio__Final_Grade__c,&apos;1.00&apos;),
    ISPICKVAL(apxio__Final_Grade__c,&apos;1.33&apos;),
    ISPICKVAL(apxio__Final_Grade__c,&apos;1.67&apos;)
  ),
  &apos;Fail&apos;,
  IF(
    OR (
      ISPICKVAL(apxio__Final_Grade__c,&apos;2.00&apos;),
      ISPICKVAL(apxio__Final_Grade__c,&apos;2.33&apos;),
      ISPICKVAL(apxio__Final_Grade__c,&apos;2.67&apos;),
      ISPICKVAL(apxio__Final_Grade__c,&apos;3.00&apos;),
      ISPICKVAL(apxio__Final_Grade__c,&apos;3.33&apos;),
      ISPICKVAL(apxio__Final_Grade__c,&apos;3.67&apos;),
      ISPICKVAL(apxio__Final_Grade__c,&apos;4.00&apos;)
    ),
    &apos;Pass&apos;,
    &apos;N/A&apos;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pass/Fail</label>
    <type>Text</type>
</CustomField>