force-app/main/default/objects/apxio__Class_Enrollment__c/fields/apxio__Tuition_Rate__c.field-meta.xml
<CustomField>
    <fullName>apxio__Tuition_Rate__c</fullName>
    <label>Tuition Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-planet</fullName>
            </value>
            <value>
                <fullName>Out-of-planet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>